
    o	Packages are now compiled with -O3.  (R itself has been since
	2.3.0.)

    o	Packages can have a 'cleanup.win' script to cleanup after
	configure etc.


BUG FIXES

    o	md5check.exe works again (it was throwing spurious differences
	after a compiler update).
	
    o	Some links in .chm help files were not working.  (PR#9586)
	
    o	rcmd Rdiff was not working (used by R CMD check).




	**************************************************
	*						 *
	*	       2.4 SERIES NEWS			 *
	*						 *
	**************************************************



		CHANGES IN R VERSION 2.4.1 patched

BUG FIXES

    o	Using the AltGr key in the script editor was treated as a control key.
	This was fixed for the rest of Rgui in R 0.9.1, and unfixed by the
	contributed code implementing the script editor.  (PR#9430)

    o	Returning focus to a window (e.g. the script editor after
	saving) no longer changes the size or position, e.g. leaving a
	maximized window maximized.

    o	When reading from pipes (which includes pipe(open="r") and
	system() with intern=TRUE or show.output.on.console=TRUE in
	Rgui) it is now possible to interrupt the command and the Rgui
	console will be responsive whilst it is running (and R will
	take up far less of the CPU).  (Probably also fixes PR#7634.)

    o	menu.ttest2() in example package 'windlgs' was broken.

    o	CHM help is now converted with support for the \encoding{} section.



		CHANGES IN R VERSION 2.4.1
		
UNCATEGORIZED

    o	Inno Setup >= 5.1.7 is now required to build the installer.

    o	Reverted 2.4.0 change that required case-sensitive specification of
	commands to R CMD.

    o	The Simplified Chinese menu messages were in the wrong format,
	causing Rgui to crash on startup. (PR#9277)

    o	Menu messages are now available in a Spanish translation.

    o	The pointsize of fonts in the windows() graphics device may now
	be set to any positive integer.

    o	Building customized installers failed because the startup